# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  generate_diff.py  make_diff.py
gendiff/formatters/: format_selection.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tools/: cli.py  parser.py
tests/: test_gendiff.py
tests/fixtures/: correct_result.txt
